--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>mt-netflix</module>
     <module>dt-cache</module>
     <module>bt-base</module>
+    <module>sa-framework</module>
   </modules>
 
   <properties>
