--- a/sa-framework/sa-spring/pom.xml
+++ b/sa-framework/sa-spring/pom.xml
@@ -3,13 +3,13 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>dt-cache</artifactId>
+    <artifactId>sa-framework</artifactId>
     <groupId>cn.kahun</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>dt-cache-redis</artifactId>
+  <artifactId>sa-spring</artifactId>
 
   <dependencies>
 
@@ -17,16 +17,6 @@
       <groupId>cn.kahun</groupId>
       <artifactId>dt-common</artifactId>
       <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-redis</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-aop</artifactId>
     </dependency>
 
   </dependencies>
