--- a/dt-message/pom.xml
+++ b/dt-message/pom.xml
@@ -9,21 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>bt-base</artifactId>
+  <artifactId>dt-message</artifactId>
 
-  <dependencies>
-
-    <dependency>
-      <groupId>cn.kahun</groupId>
-      <artifactId>dt-common</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-    </dependency>
-
-  </dependencies>
 
 </project>
