--- a/dt-message/pom.xml
+++ b/dt-message/pom.xml
@@ -10,6 +10,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>dt-message</artifactId>
+  <packaging>pom</packaging>
+  <modules>
+    <module>dt-message-rabbit</module>
+  </modules>
 
 
 </project>
