--- a/dt-common/pom.xml
+++ b/dt-common/pom.xml
@@ -37,6 +37,12 @@
       <version>${fastjson.version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
+
   </dependencies>
 
 
