--- a/dt-message/dt-message-rabbit/pom.xml
+++ b/dt-message/dt-message-rabbit/pom.xml
@@ -11,7 +11,20 @@
 
     <artifactId>dt-message-rabbit</artifactId>
 
+    <dependencies>
 
+        <dependency>
+            <groupId>cn.kahun</groupId>
+            <artifactId>dt-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
