--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <lombok.version>1.18.10</lombok.version>
     <fastjson.version>1.2.62</fastjson.version>
     <mapstruct.version>1.3.1.Final</mapstruct.version>
-    <spring.boot.version>2.2.1.RELEASE</spring.boot.version>
+    <spring.boot.version>2.2.4.RELEASE</spring.boot.version>
     <spring.cloud.version>Greenwich.SR3</spring.cloud.version>
   </properties>
 
@@ -48,6 +48,13 @@
         <groupId>com.alibaba</groupId>
         <artifactId>fastjson</artifactId>
         <version>${fastjson.version}</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.9</version>
       </dependency>
 
     </dependencies>
