--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>dt-cache</module>
     <module>sa-framework</module>
     <module>dt-message</module>
+    <module>mt-common</module>
   </modules>
 
   <properties>
@@ -22,7 +23,7 @@
     <fastjson.version>1.2.62</fastjson.version>
     <mapstruct.version>1.3.1.Final</mapstruct.version>
     <spring.boot.version>2.2.4.RELEASE</spring.boot.version>
-    <spring.cloud.version>Greenwich.SR3</spring.cloud.version>
+    <spring.cloud.version>Hoxton.SR1</spring.cloud.version>
   </properties>
 
   <dependencyManagement>
