--- a/sa-framework/sa-framework-spring/src/main/resources/application.yml
+++ b/sa-framework/sa-framework-spring/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+server:
+  port: 9000
+
 spring:
   application:
     name: spring-application
+
+#http://localhost:9000/actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
