--- a/dt-security/pom.xml
+++ b/dt-security/pom.xml
@@ -24,10 +24,10 @@
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-config</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.security</groupId>-->
+<!--      <artifactId>spring-security-config</artifactId>-->
+<!--    </dependency>-->
 
   </dependencies>
 
