--- a/sa-framework/sa-framework-spring/src/main/resources/application.yml
+++ b/sa-framework/sa-framework-spring/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 server:
   port: 9000
-
 spring:
   application:
     name: spring-application
   main:
     lazy-initialization: false
+logging:
+  level:
+    root: info
