--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <lombok.version>1.18.10</lombok.version>
     <fastjson.version>1.2.62</fastjson.version>
     <mapstruct.version>1.3.1.Final</mapstruct.version>
-    <spring.boot.version>2.2.4.RELEASE</spring.boot.version>
+    <spring.boot.version>2.2.6.RELEASE</spring.boot.version>
     <spring.cloud.version>Hoxton.SR1</spring.cloud.version>
   </properties>
 
@@ -69,6 +69,19 @@
       <artifactId>lombok</artifactId>
       <version>${lombok.version}</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <version>${spring.boot.version}</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.junit.vintage</groupId>
+          <artifactId>junit-vintage-engine</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
   </dependencies>
