--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
       <version>${spring.boot.version}</version>
       <scope>test</scope>
       <exclusions>
+        <!-- 排除JUnit 4 -->
         <exclusion>
           <groupId>org.junit.vintage</groupId>
           <artifactId>junit-vintage-engine</artifactId>
