--- a/sa-framework/sa-framework-spring/pom.xml
+++ b/sa-framework/sa-framework-spring/pom.xml
@@ -24,7 +24,15 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
+
+    </dependencies>
 
 
 </project>
