--- a/sa-framework/sa-mybatis/src/main/resources/application.yml
+++ b/sa-framework/sa-mybatis/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://10.16.2.24:3306/piaoeda_admission?useUnicode=true&amp;characterEncoding=utf-8&amp;allowMultiQueries=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://49.233.139.17/test?useUnicode=true&amp;characterEncoding=utf-8&amp;allowMultiQueries=true&amp;useSSL=false&amp;serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root1234.
+  main:
+    log-startup-info: false
+    web-application-type: none
+mybatis:
+  mapper-locations: cn.kahun.sa.mybatis.mapper.UserMapper
