--- a/sa-framework/sa-framework-test/pom.xml
+++ b/sa-framework/sa-framework-test/pom.xml
@@ -3,19 +3,13 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>lucifer</artifactId>
+    <artifactId>sa-framework</artifactId>
     <groupId>cn.kahun</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>sa-framework</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-    <module>sa-framework-spring</module>
-    <module>sa-framework-test</module>
-    <module>sa-framework-mybatis</module>
-  </modules>
+  <artifactId>sa-framework-test</artifactId>
 
 
 </project>
