--- a/dt-common/pom.xml
+++ b/dt-common/pom.xml
@@ -10,6 +10,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>dt-common</artifactId>
+  <packaging>pom</packaging>
+  <modules>
+    <module>common</module>
+    <module>common-web</module>
+  </modules>
 
   <dependencies>
 
