--- a/mt-netflix/mt-netflix-eureka/pom.xml
+++ b/mt-netflix/mt-netflix-eureka/pom.xml
@@ -3,19 +3,21 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>lucifer</artifactId>
+    <artifactId>mt-netflix</artifactId>
     <groupId>cn.kahun</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-
-  <packaging>pom</packaging>
-  <artifactId>mt-netflix</artifactId>
   <modelVersion>4.0.0</modelVersion>
 
-  <modules>
-    <module>mt-netflix-hystrix</module>
-    <module>mt-netflix-eureka</module>
-  </modules>
+  <artifactId>mt-netflix-eureka</artifactId>
 
+  <dependencies>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+    </dependency>
+
+  </dependencies>
 
 </project>
