--- a/dt-security/src/main/resources/application.yml
+++ b/dt-security/src/main/resources/application.yml
@@ -3,7 +3,13 @@ server:
 spring:
   application:
     name: security-application
-#logging:
-#  level:
-#    root: warn
-#    org.springframework.web: debug
+  datasource:
+    url: jdbc:mysql://49.233.139.17:3306/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    username: root
+    password: Root1234.
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.zaxxer.hikari.HikariDataSource
+    initialization-mode: always
+    hikari:
+      connection-timeout: 60000
+      maximum-pool-size: 5
