--- a/sa-framework/sa-framework-mybatis/src/main/resources/application.yml
+++ b/sa-framework/sa-framework-mybatis/src/main/resources/application.yml
@@ -2,13 +2,9 @@ spring:
   application:
     name: mybatis-application
   main:
-    log-startup-info: false
     web-application-type: none
-    banner-mode: off
-  config:
-    name: jdbc
   datasource:
-    url: jdbc:mysql://49.233.139.17:3306/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://49.233.139.17/test?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
     password: Root1234.
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -18,4 +14,4 @@ spring:
       connection-timeout: 60000
       maximum-pool-size: 5
 mybatis:
-  mapper-locations: classpath:/mapper/*.xml
+  mapper-locations: classpath:mapper/*.xml
