--- a/sa-framework/sa-framework-mybatis/pom.xml
+++ b/sa-framework/sa-framework-mybatis/pom.xml
@@ -29,6 +29,13 @@
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
