--- a/dt-common/common/pom.xml
+++ b/dt-common/common/pom.xml
@@ -11,5 +11,12 @@
 
   <artifactId>common</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
 </project>
