--- a/sa-framework/sa-framework-mybatis/src/main/resources/application.yml
+++ b/sa-framework/sa-framework-mybatis/src/main/resources/application.yml
@@ -14,4 +14,6 @@ spring:
       connection-timeout: 60000
       maximum-pool-size: 5
 mybatis:
-  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath:/mapper/*.xml
+  configuration:
+    log-prefix: dao.
